# example_fastapi

./: .env  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: e74e85c33f6a_.py
src/: CoreCRUD.py  config.py  database.py  exceptions.py  main.py
src/tasks/: crud.py  models.py  routes.py  schemas.py
src/users/: crud.py  models.py  routes.py  schemas.py
src/users/services/: auth.py  dependencies.py
